# quadcopter-motorcontroller

./: .clang-format  .clangd  CMakeLists.txt  compile_commands.json
.devcontainer/: devcontainer.json  dockerfile
lib/built/: specs-attiny3217
lib/include/: common.h  fuse.h  interrupt.h  iotn3217.h  lock.h  portpins.h  sfr_defs.h
src/: debug.c  debug.h  io.c  io.h  main.c  main.h  port.c  port.h  system.c  system.h  types.h  usart.c  usart.h  utils.c  utils.h
